--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "antd": "^3.6.2",
     "babel-plugin-import": "^1.7.0",
+    "babel-polyfill": "^6.26.0",
     "dva": "^2.3.0",
+    "dva-loading": "^2.0.3",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
